[package]
name = "cost-models"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
cost-model = { git = "https://github.com/graphprotocol/agora", tag = "v0.1.18" }
num-traits = "0.2.17"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
thegraph = { git = "https://github.com/edgeandnode/toolshed", tag = "thegraph-v0.1.1", features = [
  "subgraph-client",
] }
tokio = { version = "1.35.0", features = ["macros", "rt"] }
toolshed = { git = "https://github.com/edgeandnode/toolshed", tag = "v0.4.0" }
